--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -2,7 +2,6 @@
 import { Image } from "astro:assets";
 import Cobe from "@components/cobe.astro";
 import Link from "@components/ui/link.astro";
-import abstractDottedGlobeIllustration from "assets/abstract-dotted-globe-illustration.png";
 import { t } from "i18next";
 
 const { dynamic = false } = Astro.props;
@@ -72,12 +71,12 @@ const { dynamic = false } = Astro.props;
 							<Cobe />
 						</>
 					) : (
-						<Image
+						<img
 							class="inline-block mt-12 md:mt-20"
-							src={abstractDottedGlobeIllustration}
-							alt="Astros"
-							width={600}
-							height={600}
+							src="/images/heartline-logo.png"
+							alt="Heartline Songsmith"
+							width="600"
+							height="600"
 							loading="eager"
 						/>
 					)
