adding my YouTube premier vid preview

--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -88,16 +88,19 @@ const process = [
 <div class="py-20">
 	<div class="mx-auto max-w-7xl px-6 grid md:grid-cols-2 gap-12 items-center">
 		<div>
-			<!-- Placeholder for Premier Vid -->
+			<!-- Premier Vid Example -->
 			<div class="bg-gray-100 dark:bg-gray-800 border border-gray-200 dark:border-gray-700 rounded-lg p-4 shadow-2xl">
-				<div class="aspect-video bg-black rounded flex items-center justify-center">
-					<div class="text-center">
-						<p class="text-2xl text-red-500 font-bold">Heartline Hits on GWPTV</p>
-						<p class="text-gray-400">Your Premier Vid Will Appear Here</p>
-						<svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 text-gray-600 mx-auto mt-4" viewBox="0 0 20 20" fill="currentColor">
-							<path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM9.555 7.168A1 1 0 008 8v4a1 1 0 001.555.832l3-2a1 1 0 000-1.664l-3-2z" clip-rule="evenodd" />
-						</svg>
-					</div>
+				<div class="aspect-video bg-black rounded overflow-hidden">
+					<iframe
+						width="100%"
+						height="100%"
+						src="https://www.youtube.com/embed/1dNDBcwGiB8"
+						title="Heartline Songsmith Premier Vid Example"
+						frameborder="0"
+						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+						allowfullscreen
+						class="w-full h-full"
+					></iframe>
 				</div>
 			</div>
 		</div>
