removing more template bits, better linking, pricing page

--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -85,7 +85,7 @@ export const menuitems = [
 			}
 		</div>
 		<div class="mt-4 md:mt-0 flex flex-col md:flex-row gap-4">
-			<Link href="#start" class="md:px-3 md:py-2 leading-6">
+			<Link href="https://www.etsy.com/listing/4380754520/last-minute-anniversary-gift-custom-song" target="_blank" rel="noopener noreferrer" class="md:px-3 md:py-2 leading-6">
 				{t("header.primary_button_text")}
 			</Link>
 		</div>
