--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -39,7 +39,7 @@ const { dynamic = false } = Astro.props;
 					{t("hero.subtitle")}
 				</p>
 				<div class="mt-10 flex items-center justify-center gap-x-2 md:gap-x-6">
-					<Link href="https://github.com/zankhq/astros">{t("hero.main_button_text")}</Link>
+					<Link href="https://www.etsy.com/listing/4380754520/last-minute-anniversary-gift-custom-song" target="_blank" rel="noopener noreferrer">{t("hero.main_button_text")}</Link>
 					{
 						dynamic ? (
 							<Link href="/" style="muted">
@@ -49,7 +49,7 @@ const { dynamic = false } = Astro.props;
 								</span>
 							</Link>
 						) : (
-							<Link href="/animated" style="muted">
+							<Link href="/#how-it-works" style="muted">
 								{t("hero.secondary_button_text")}
 								<span aria-hidden="true" class="pl-1 text-black dark:text-white">
 									→
