--- a/src/components/pricing.astro
+++ b/src/components/pricing.astro
@@ -14,7 +14,7 @@ const { plan } = Astro.props;
 			{plan.price && typeof plan.price === "object" ? plan.price.monthly : plan.price}
 		</span>
 	</p>
-	<Link href="#" aria-describedby="tier-enterprise" style="outline" class="block w-full mt-6">{plan.button.text || "Get Started"}</Link>
+	<Link href="https://www.etsy.com/listing/4380754520/last-minute-anniversary-gift-custom-song" target="_blank" rel="noopener noreferrer" aria-describedby="tier-enterprise" style="outline" class="block w-full mt-6">{plan.button.text || "Get Started"}</Link>
 	<ul role="list" class="mt-8 space-y-3 text-sm leading-6 text-gray-600 dark:text-gray-300 xl:mt-10">
 		{
 			plan.features.map((item) => (
