--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import { ViewTransitions } from "astro:transitions";
 import { pwaInfo } from "virtual:pwa-info";
 import Footer from "@components/footer.astro";
 import Navbar from "@components/navbar/navbar.astro";
+import GoogleAnalytics from "@components/GoogleAnalytics.astro";
 import "@fontsource-variable/inter";
 import { HeadHrefLangs } from "astro-i18next/components";
 import { SEO } from "astro-seo";
@@ -36,6 +37,8 @@ const makeTitle = title
 		<meta name="generator" content={Astro.generator} />
 		<meta name="theme-color" content="#ffffff" />
 		<HeadHrefLangs />
+
+		<GoogleAnalytics id="G-E8KRR5V5Y0" />
 
 		<ViewTransitions />
 
