remove gpu animations on mobile

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -8,9 +8,9 @@ const { dynamic = false } = Astro.props;
 ---
 
 <div class="relative isolate pt-14 dark:bg-stone-950">
-	<div class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80">
+	<div class="absolute inset-x-0 -top-40 -z-10 overflow-hidden blur-3xl sm:-top-80">
 		<svg
-			class="relative left-[calc(50%-11rem)] -z-10 h-[21.1875rem] max-w-none -translate-x-1/2 rotate-[30deg] sm:left-[calc(50%-30rem)] sm:h-[42.375rem] animate-slide"
+			class="relative left-[calc(50%-11rem)] -z-10 h-[21.1875rem] max-w-none -translate-x-1/2 rotate-[30deg] sm:left-[calc(50%-30rem)] sm:h-[42.375rem] md:animate-slide"
 			viewBox="0 0 1155 678">
 			<path
 				fill="url(#9b2541ea-d39d-499b-bd42-aeea3e93f5ff)"
@@ -84,9 +84,9 @@ const { dynamic = false } = Astro.props;
 			</div>
 		</div>
 	</div>
-	<div class="absolute inset-x-0 top-[calc(100%-13rem)] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[calc(100%-30rem)]">
+	<div class="absolute inset-x-0 top-[calc(100%-13rem)] -z-10 overflow-hidden blur-3xl sm:top-[calc(100%-30rem)]">
 		<svg
-			class="relative left-[calc(50%+3rem)] h-[21.1875rem] max-w-none -translate-x-1/2 sm:left-[calc(50%+36rem)] sm:h-[42.375rem] animate-slide"
+			class="relative left-[calc(50%+3rem)] h-[21.1875rem] max-w-none -translate-x-1/2 sm:left-[calc(50%+36rem)] sm:h-[42.375rem] md:animate-slide"
 			viewBox="0 0 1155 678">
 			<path
 				fill="url(#b9e4a85f-ccd5-4151-8e84-ab55c66e5aa1)"
