--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,10 @@
+/* Import Lora font for serif headings */
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,600;1,400&display=swap');
+
+.font-serif {
+	font-family: 'Lora', serif;
+}
+
 .heading-wrapper {
 	display: flex;
 	align-items: baseline;
