--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,16 +12,17 @@ import i18next from "i18next";
 export interface Props {
 	title?: string;
 	lang?: string;
+	ogImage?: string;
 }
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site).toString();
 
+const { title, lang = null, ogImage } = Astro.props;
+
 const resolvedImageWithDomain = new URL(
-	"/meta/opengraph.png",
+	ogImage || "/meta/opengraph.png",
 	Astro.site,
 ).toString();
-
-const { title, lang = null } = Astro.props;
 
 const makeTitle = title
 	? `${title} | Heartline Songsmith`
@@ -53,7 +54,7 @@ const makeTitle = title
 				basic: {
 					url: canonicalURL,
 					type: "website",
-					title: `Heartline Songsmith - Your Story, Your Song. In Hours.`,
+					title: makeTitle,
 					image: resolvedImageWithDomain,
 				},
 				image: {
